# ota

./: Cargo.toml
azure-iot-mqtt/: Cargo.toml  README.md
azure-iot-mqtt/examples/: device.rs  module.rs
azure-iot-mqtt/examples/common/: mod.rs
azure-iot-mqtt/src/: device.rs  io.rs  lib.rs  module.rs
azure-iot-mqtt/src/twin_state/: desired.rs  mod.rs  reported.rs
contrib/systemd/: ota.service
doc/: Makefile
doc/src/: update.dot
mqtt/: .gitignore  Cargo.toml  README.md
mqtt/examples/: decode.rs  publisher.rs  subscriber.rs  will.rs
mqtt/examples/common/: mod.rs
mqtt/mqtt-fuzz/: Cargo.toml  build.rs
mqtt/mqtt-fuzz/src/: main.rs
mqtt/src/: lib.rs  logging_framed.rs
mqtt/src/client/: connect.rs  mod.rs  ping.rs  publish.rs  subscriptions.rs
mqtt/src/proto/: mod.rs  packet.rs
mqtt/tests/: simple.rs  subscriptions.rs
mqtt/tests/common/: mod.rs
ota/: Cargo.toml
ota/src/: error.rs  main.rs  updater.rs
