[package]
name = "azure-iot-mqtt"
version = "0.1.0"
authors = ["Arnav Singh <arsing@microsoft.com>"]
edition = "2018"

[dependencies]
futures = "0.1"
lazy_static = "1.2"
log = "0.4"
mqtt = { path = "../mqtt" }
native-tls = "0.2"
regex = "1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1"
tokio-io-timeout = "0.3"
tokio-tls = "0.2"
tungstenite = "0.6"
url = "1.7"

[dev-dependencies]
chrono = "0.4"
env_logger = "0.6"
structopt = "0.2"
structopt-derive = "0.2"
tokio-signal = "0.2"
