[package]
name = "ota"
version = "0.1.0"
authors = ["Mike Yagley <myagley@gmail.com>"]
repository = "https://github.com/myagley/ota.git"
homepage = "https://github.com/myagley/ota"
description = "Azure IoT update client"
edition = "2018"

[dependencies]
env_logger = "0.6"
failure = "0.1"
futures = "0.1"
log = "0.4"
serde_json = "1.0"
tokio = "0.1"
tokio-process = "0.2"
tokio-signal = "0.2"

azure-iot-mqtt = { path = "../azure-iot-mqtt" }
